[metadata]
name = nbconvert-pdfqt
description = PDF Input/Output for nbconvert powered by JupyterLab and QTWebEngine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/nbconvert-pdfqt
author = Dead Pixels Collective
author_email = nick.bollweg@gmail.com
license = BSD-3-Clause
license-file = LICENSE
description-file = README.md
keywords =
    Interactive
    Jupyter
    notebook
    Testing
    Web
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only

[options.entry_points]
nbconvert.exporters =
    pdfqt = nbconvert_pdfqt:PDFQtExporter

[options]
install_requires =
    nbconvert
    pyqt >=5.9,<6
    jupyterlab >=0.35,<0.36

package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src

[bdist_wheel]
universal=1

[flake8]
exclude = .git,__pycache__,envs
max-complexity = 10
max-line-length = 88
ignore = E203,W503

[isort]
lines_after_imports = 2
line_length = 88

[tool:pytest]
addopts =
  --pyargs nbconvert_pdfqt
  --cov nbconvert_pdfqt
  --cov-report term-missing

filterwarnings =
  ignore::DeprecationWarning
